# image_magick_ffi

./: .gitignore  .metadata  CHANGELOG.md  PROGRESS.md  README.md  analysis_options.yaml  ffigen.yaml  magick_wand_bindings_ffigen.yaml  plugin_bindings_ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
src/: CMakeLists.txt  image_magick_ffi.c  image_magick_ffi.h
src/Dependencies/ImageMagick/arm64-v8a/: README.txt
src/Dependencies/ImageMagick/include/MagickCore/: magick-baseconfig.h  version.h
src/Dependencies/ImageMagick/lib/: CORE_DB_Magick++_.lib  CORE_DB_MagickCore_.lib  CORE_DB_MagickWand_.lib  CORE_DB_bzlib_.lib  CORE_DB_cairo_.lib  CORE_DB_croco_.lib  CORE_DB_exr_.lib  CORE_DB_ffi_.lib  CORE_DB_freetype_.lib  CORE_DB_fribidi_.lib  CORE_DB_glib_.lib  CORE_DB_harfbuzz_.lib  CORE_DB_heif_.lib  CORE_DB_highway_.lib  CORE_DB_jp2_.lib  CORE_DB_jpeg-turbo_.lib  CORE_DB_jpeg-xl_.lib  CORE_DB_lcms_.lib  CORE_DB_lqr_.lib  CORE_DB_lzma_.lib  CORE_DB_openjpeg_.lib  CORE_DB_pango_.lib  CORE_DB_pixman_.lib  CORE_DB_png_.lib  CORE_DB_raqm_.lib  CORE_DB_raw_.lib  CORE_DB_rsvg_.lib  CORE_DB_tiff_.lib  CORE_DB_webp_.lib  CORE_DB_xml_.lib  CORE_DB_zip_.lib  CORE_DB_zlib_.lib  CORE_RL_Magick++_.lib  CORE_RL_MagickCore_.lib  CORE_RL_MagickWand_.lib  CORE_RL_brotli_.lib  CORE_RL_croco_.lib  CORE_RL_highway_.lib  CORE_RL_pixman_.lib  CORE_RL_zip_.lib  (+156 more)
src/Dependencies/ImageMagick/lib/linux/: libMagick++-7.Q8.so.5.0.0T
src/Dependencies/ImageMagick/lib/x64/: CORE_RL_Magick++_.lib  CORE_RL_brotli_.lib  CORE_RL_croco_.lib  CORE_RL_ffi_.lib  CORE_RL_fribidi_.lib  CORE_RL_glib_.lib  CORE_RL_highway_.lib  CORE_RL_jpeg-turbo_.lib  CORE_RL_jpeg-xl_.lib  CORE_RL_pixman_.lib  CORE_RL_raqm_.lib  CORE_RL_tiff_.lib  IM_MOD_RL_bgr_.lib  IM_MOD_RL_cut_.lib  IM_MOD_RL_dcm_.lib  IM_MOD_RL_dng_.lib  IM_MOD_RL_heic_.lib  IM_MOD_RL_miff_.lib  IM_MOD_RL_qoi_.lib  IM_MOD_RL_rle_.lib  IM_MOD_RL_sfw_.lib  IM_MOD_RL_tiff_.lib
src/Dependencies/ImageMagick/lib/x86/: CORE_RL_brotli_.lib  CORE_RL_croco_.lib  CORE_RL_ffi_.lib  CORE_RL_glib_.lib  CORE_RL_heif_.lib  CORE_RL_highway_.lib  CORE_RL_jpeg-turbo_.lib  CORE_RL_lqr_.lib  CORE_RL_openjpeg_.lib  CORE_RL_pixman_.lib  CORE_RL_raqm_.lib  CORE_RL_rsvg_.lib  IM_MOD_RL_avs_.lib  IM_MOD_RL_cals_.lib  IM_MOD_RL_clipboard_.lib  IM_MOD_RL_cube_.lib  IM_MOD_RL_djvu_.lib  IM_MOD_RL_emf_.lib  IM_MOD_RL_gray_.lib  IM_MOD_RL_histogram_.lib  IM_MOD_RL_jpeg_.lib  IM_MOD_RL_mvg_.lib  IM_MOD_RL_pes_.lib  IM_MOD_RL_psd_.lib  IM_MOD_RL_rla_.lib  IM_MOD_RL_screenshot_.lib  IM_MOD_RL_svg_.lib  IM_MOD_RL_tile_.lib  IM_MOD_RL_xc_.lib  IM_MOD_RL_yaml_.lib  IM_MOD_RL_yuv_.lib
src/Dependencies/ImageMagick/x64/Q16-HDRI/lib/: CORE_RL_MagickWand_.lib  CORE_RL_brotli_.lib  CORE_RL_croco_.lib  CORE_RL_exr_.lib  CORE_RL_ffi_.lib  CORE_RL_freetype_.lib  CORE_RL_highway_.lib  CORE_RL_lcms_.lib  CORE_RL_lqr_.lib  CORE_RL_lzma_.lib  CORE_RL_pango_.lib  CORE_RL_pixman_.lib  CORE_RL_raqm_.lib  CORE_RL_raw_.lib  CORE_RL_rsvg_.lib  CORE_RL_webp_.lib  CORE_RL_zlib_.lib  IM_MOD_RL_aai_.lib  IM_MOD_RL_avs_.lib  IM_MOD_RL_bayer_.lib  IM_MOD_RL_braille_.lib  IM_MOD_RL_cals_.lib  IM_MOD_RL_caption_.lib  IM_MOD_RL_cin_.lib  IM_MOD_RL_cip_.lib  IM_MOD_RL_clip_.lib  IM_MOD_RL_clipboard_.lib  IM_MOD_RL_debug_.lib  IM_MOD_RL_dot_.lib  IM_MOD_RL_dpx_.lib  IM_MOD_RL_farbfeld_.lib  IM_MOD_RL_flif_.lib  IM_MOD_RL_fpx_.lib  IM_MOD_RL_gif_.lib  IM_MOD_RL_gradient_.lib  IM_MOD_RL_gray_.lib  IM_MOD_RL_hald_.lib  IM_MOD_RL_icon_.lib  IM_MOD_RL_inline_.lib  IM_MOD_RL_jbig_.lib  (+43 more)
src/Dependencies/ImageMagick/x64/Q16/lib/: CORE_RL_brotli_.lib  CORE_RL_croco_.lib  CORE_RL_ffi_.lib  CORE_RL_heif_.lib  CORE_RL_highway_.lib  CORE_RL_pixman_.lib  CORE_RL_png_.lib  CORE_RL_raqm_.lib  FILTER_analyze_.lib  IM_MOD_RL_bmp_.lib  IM_MOD_RL_cmyk_.lib  IM_MOD_RL_dib_.lib  IM_MOD_RL_djvu_.lib  IM_MOD_RL_dps_.lib  IM_MOD_RL_exr_.lib  IM_MOD_RL_ftxt_.lib  IM_MOD_RL_html_.lib  IM_MOD_RL_info_.lib  IM_MOD_RL_label_.lib  IM_MOD_RL_mask_.lib  IM_MOD_RL_matte_.lib  IM_MOD_RL_null_.lib  IM_MOD_RL_pict_.lib  IM_MOD_RL_rgb_.lib  IM_MOD_RL_screenshot_.lib  IM_MOD_RL_thumbnail_.lib  IM_MOD_RL_tim_.lib  IM_MOD_RL_uil_.lib  IM_MOD_RL_video_.lib  IM_MOD_RL_viff_.lib  IM_MOD_RL_yaml_.lib
src/Dependencies/ImageMagick/x64/Q8-HDRI/lib/: CORE_RL_Magick++_.lib  CORE_RL_brotli_.lib  CORE_RL_cairo_.lib  CORE_RL_croco_.lib  CORE_RL_ffi_.lib  CORE_RL_harfbuzz_.lib  CORE_RL_highway_.lib  CORE_RL_jp2_.lib  CORE_RL_openjpeg_.lib  CORE_RL_pixman_.lib  CORE_RL_raqm_.lib  CORE_RL_xml_.lib  IM_MOD_RL_ashlar_.lib  IM_MOD_RL_emf_.lib  IM_MOD_RL_hrz_.lib  IM_MOD_RL_magick_.lib  IM_MOD_RL_mvg_.lib  IM_MOD_RL_plasma_.lib  IM_MOD_RL_rgf_.lib  IM_MOD_RL_vid_.lib  IM_MOD_RL_yuv_.lib
src/Dependencies/ImageMagick/x64/Q8/lib/: CORE_RL_brotli_.lib  CORE_RL_bzlib_.lib  CORE_RL_croco_.lib  CORE_RL_ffi_.lib  CORE_RL_highway_.lib  CORE_RL_pixman_.lib  CORE_RL_raqm_.lib  IM_MOD_RL_fax_.lib  IM_MOD_RL_msl_.lib  IM_MOD_RL_ora_.lib  IM_MOD_RL_png_.lib  IM_MOD_RL_ps_.lib  IM_MOD_RL_raw_.lib  IM_MOD_RL_uyvy_.lib  IM_MOD_RL_wbmp_.lib  IM_MOD_RL_xc_.lib  IM_MOD_RL_xpm_.lib  IM_MOD_RL_xps_.lib
src/Dependencies/ImageMagick/x86/: README.txt
src/Dependencies/ImageMagick/x86/Q16-HDRI/lib/: CORE_RL_Magick++_.lib  CORE_RL_brotli_.lib  CORE_RL_bzlib_.lib  CORE_RL_croco_.lib  CORE_RL_exr_.lib  CORE_RL_ffi_.lib  CORE_RL_freetype_.lib  CORE_RL_highway_.lib  CORE_RL_jp2_.lib  CORE_RL_lcms_.lib  CORE_RL_pixman_.lib  CORE_RL_raqm_.lib  CORE_RL_tiff_.lib  CORE_RL_xml_.lib  FILTER_analyze_.lib  IM_MOD_RL_ashlar_.lib  IM_MOD_RL_braille_.lib  IM_MOD_RL_cin_.lib  IM_MOD_RL_cip_.lib  IM_MOD_RL_clip_.lib  IM_MOD_RL_cmyk_.lib  IM_MOD_RL_cut_.lib  IM_MOD_RL_dcm_.lib  IM_MOD_RL_dds_.lib  IM_MOD_RL_debug_.lib  IM_MOD_RL_dib_.lib  IM_MOD_RL_dps_.lib  IM_MOD_RL_dpx_.lib  IM_MOD_RL_ept_.lib  IM_MOD_RL_farbfeld_.lib  IM_MOD_RL_fax_.lib  IM_MOD_RL_fits_.lib  IM_MOD_RL_ftxt_.lib  IM_MOD_RL_gradient_.lib  IM_MOD_RL_hald_.lib  IM_MOD_RL_hdr_.lib  IM_MOD_RL_icon_.lib  IM_MOD_RL_jnx_.lib  IM_MOD_RL_jp2_.lib  IM_MOD_RL_json_.lib  (+47 more)
src/Dependencies/json-c/include/: config.h
windows/: CMakeLists.txt
(+142 files in other folders)
